--- a/index.html
+++ b/index.html
@@ -64,5 +64,71 @@
         </button>
     </div>
 </div>
+<div class="ramka">
+    <h1 align="center">
+        History of Physics
+    </h1>
+    <div align="center">
+        <button class="in-row" >
+            I
+        </button>
+        <button class="in-row">
+            II
+        </button>
+        <button class="in-row">
+            III
+        </button>
+        <button class="in-row">
+            IV
+        </button>
+        <button class="in-row">
+            V
+        </button>
+    </div>
+</div>
+<div class="ramka">
+    <h1 align="center">
+        History of Physics
+    </h1>
+    <div align="center">
+        <button class="in-row" >
+            I
+        </button>
+        <button class="in-row">
+            II
+        </button>
+        <button class="in-row">
+            III
+        </button>
+        <button class="in-row">
+            IV
+        </button>
+        <button class="in-row">
+            V
+        </button>
+    </div>
+</div>
+<div class="ramka">
+    <h1 align="center">
+        History of Physics
+    </h1>
+    <div align="center">
+        <button class="in-row" >
+            I
+        </button>
+        <button class="in-row">
+            II
+        </button>
+        <button class="in-row">
+            III
+        </button>
+        <button class="in-row">
+            IV
+        </button>
+        <button class="in-row">
+            V
+        </button>
+    </div>
+</div>
 </body>
 </html>
