--- a/index.html
+++ b/index.html
@@ -10,23 +10,29 @@
             padding: 5px;
             font: 8pt Tahoma;
             color: #2c2c2c;
-            height: 20vh;
+            height: 17vh;
             background-image: url(1.jpg);
         }
         .in-row{
             display: inline-block;
             font: 4vh Tahoma;
         }
+        .main{
+            height: 5vh;
+        }
     </style>
 </head>
 <body>
+<div class="main">
+
+</div>
 <div class="ramka">
     <h1 align="center">
         History of Physics
     </h1>
     <div align="center">
         <button class="in-row" >
-            I
+            I1
         </button>
         <button class="in-row">
             II
@@ -38,7 +44,7 @@
             IV
         </button>
         <button class="in-row">
-            V
+            V1
         </button>
     </div>
 </div>
