--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/bootstrap.min.css" >
     <style type="text/css">
-        .ramka {
+        .ramka{
             background: #eeeee5;
             border: 1px dashed #abab9a;
             padding: 5px;
@@ -17,15 +17,10 @@
             display: inline-block;
             font: 4vh Tahoma;
         }
-        .main{
-            height: 5vh;
-        }
     </style>
 </head>
 <body>
-<div class="main">
-
-</div>
+<div><img src="images/logo_small.png" width="100" height="100"></div>
 <div class="ramka">
     <h1 align="center">
         History of Physics
