--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style type="text/css">
         .ramka{
             background: #eeeee5;
-            border: 1px dashed #abab9a;
+            border: 1px dashed mediumvioletred;
             padding: 5px;
             font: 8pt Tahoma;
             color: #2c2c2c;
@@ -15,8 +15,10 @@
         }
         .in-row{
             display: inline-block;
-            font: 4vh Tahoma;
+            font: 4vh "Times New Roman";
+
         }
+
     </style>
 </head>
 <body>
