И добавлена аддоптивность конопок

--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
             padding: 5px;
             font: 8pt Tahoma;
             color: #2c2c2c;
-            height: 17vh;
+            min-height: 17vh;
             background-image: url(1.jpg);
         }
         .in-row{
             display: inline-block;
             font: 4vh Tahoma;
+            width: 15%;
+        }
+        .content{
+            margin-left: 20vh;
+            margin-right: 20vh;
         }
     </style>
 </head>
@@ -25,20 +30,20 @@
     <h1 align="center">
         History of Physics
     </h1>
-    <div align="center">
-        <button class="in-row" >
+    <div class="content" align="center">
+        <button class="in-row btn btn-secondary" >
             I1
         </button>
-        <button class="in-row">
+        <button class="in-row btn btn-secondary">
             II
         </button>
-        <button class="in-row">
+        <button class="in-row btn btn-secondary">
             III
         </button>
-        <button class="in-row">
+        <button class="in-row btn btn-secondary">
             IV
         </button>
-        <button class="in-row">
+        <button class="in-row btn btn-secondary">
             V1
         </button>
     </div>
@@ -47,20 +52,20 @@
     <h1 align="center">
         interdisciplinary physics
     </h1>
-    <div align="center">
-        <button class="in-row" >
+    <div class="content" align="center">
+        <button class="in-row btn btn-secondary" >
             I
         </button>
-        <button class="in-row">
+        <button class="in-row btn btn-secondary">
             II
         </button>
-        <button class="in-row">
+        <button class="in-row btn btn-secondary">
             III
         </button>
-        <button class="in-row">
+        <button class="in-row btn btn-secondary">
             IV
         </button>
-        <button class="in-row">
+        <button class="in-row btn btn-secondary">
             V
         </button>
     </div>
@@ -69,20 +74,20 @@
     <h1 align="center">
         History of Physics
     </h1>
-    <div align="center">
-        <button class="in-row" >
+    <div class="content" align="center">
+        <button class="in-row btn btn-secondary" >
             I
         </button>
-        <button class="in-row">
+        <button class="in-row btn btn-secondary">
             II
         </button>
-        <button class="in-row">
+        <button class="in-row btn btn-secondary">
             III
         </button>
-        <button class="in-row">
+        <button class="in-row btn btn-secondary">
             IV
         </button>
-        <button class="in-row">
+        <button class="in-row btn btn-secondary" >
             V
         </button>
     </div>
@@ -91,20 +96,20 @@
     <h1 align="center">
         History of Physics
     </h1>
-    <div align="center">
-        <button class="in-row" >
+    <div class="content" align="center">
+        <button class="in-row btn btn-secondary" >
             I
         </button>
-        <button class="in-row">
+        <button class="in-row btn btn-secondary">
             II
         </button>
-        <button class="in-row">
+        <button class="in-row btn btn-secondary">
             III
         </button>
-        <button class="in-row">
+        <button class="in-row btn btn-secondary">
             IV
         </button>
-        <button class="in-row">
+        <button class="in-row btn btn-secondary">
             V
         </button>
     </div>
@@ -113,20 +118,20 @@
     <h1 align="center">
         History of Physics
     </h1>
-    <div align="center">
-        <button class="in-row" >
+    <div class="content" align="center">
+        <button class="in-row btn btn-secondary" >
             I
         </button>
-        <button class="in-row">
+        <button class="in-row btn btn-secondary">
             II
         </button>
-        <button class="in-row">
+        <button class="in-row btn btn-secondary">
             III
         </button>
-        <button class="in-row">
+        <button class="in-row btn btn-secondary">
             IV
         </button>
-        <button class="in-row">
+        <button class="in-row btn btn-secondary">
             V
         </button>
     </div>
