--- a/index_v.html
+++ b/index_v.html
@@ -1,6 +1,18 @@
 <html>
 <head>
+    <link rel="stylesheet" href="css/bootstrap.min.css" >
     <title>History of Physics - Part I</title>
+    <style type="text/css">
+        .main-menu-button{
+            margin-top: 5px;
+        }
+        .next-button{
+            margin-top: 5px;
+        }
+        .task-text{
+            margin-left: 21px;
+        }
+    </style>
 </head>
 
 <body>
@@ -10,9 +22,10 @@
         <h1 align="center"><span>Part I</span></h1>
     </div>
     <div class="task">
-        You will watch six short video films about some great discoveries in physics made by outstanding scientists.<br>
-        As you watch match the videos <font class="task-char">1-6</font> with the appropriate headings <font class="task-char">A-H</font> in the text.
-        There are two extra headings which you do not need to use.
+        <a class="task-text"> You will watch six short video films about some great discoveries in physics made by outstanding scientists.
+        As you watch match the videos 1-6 with the appropriate headingsA-H in the text.
+            There are two extra headings which you do not need to use.
+        </a>
 </div>
 </div>
 
@@ -32,10 +45,10 @@
 </div>
 
 <div class="buttonList">
-    <input type="button" class="next-button" value="Next part" onclick="" />
+    <input type="button" class="next-button btn-primary" value="Next part" onclick="" />
     <div class="menu-buttons">
-        <input type="button" class="menu-button" value="Choose part" onclick="" />
-        <input type="button" class="menu-button" value="Main menu" onclick="" />
+        <input type="button" class="part-chooser btn-primary" value="Choose part" onclick="" />
+        <input type="button" class="main-menu-button btn-primary" value="Main menu" onclick="" />
     </div>
 </div>
 
