--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
              </div>
              <div class="menu">
                     <a href="#">Home</a>
-                    <a href="#">About</a>
+                    <a href="/about.php">About</a>
                     <a href="#">Content</a>
                     <a href="#navanchor">Nav</a>
             </div>
@@ -38,7 +38,7 @@
 <div class="centerblock">
 <p class="navtitle">Навигация</p>
 <ul class="theme1">
-	<li class="themetitleblock"><span class="themenumber1">I</span><span class="themetitle">Universe</span></li>
+	<li class="themetitleblock"><span class="themenumber1">I</span><span class="themetitle">HISTORY OF PHYSICS</span></li>
     <li class="part"><span class="partnumber1">1</span><span class="parttitle"><a href="tests.php?title=0&part=0">Part 1</a></span></li>
 	<li class="part"><span class="partnumber1">2</span><span class="parttitle"><a href="tests.php?title=0&part=1">Part 2</a></span></li>
 	<li class="part"><span class="partnumber1">3</span><span class="parttitle"><a href="tests.php?title=0&part=2">Part 3</a></span></li>
@@ -46,7 +46,7 @@
 	<li class="part"><span class="partnumber1">5</span><span class="parttitle"><a href="tests.php?title=0&part=4">Part 5</a></span></li>
   </ul>
   <ul class="theme2">
-    <li class="themetitleblock"><span class="themenumber2">II</span><span class="themetitle">Universe</span></li>
+    <li class="themetitleblock"><span class="themenumber2">II</span><span class="themetitle">STUDY OF THE UNIVERSE</span></li>
     <li class="part"><span class="partnumber2">1</span><span class="parttitle"><a href="tests.php?title=1&part=0">Part 1</a></span></li>
 	<li class="part"><span class="partnumber2">2</span><span class="parttitle"><a href="tests.php?title=1&part=1">Part 2</a></span></li>
 	<li class="part"><span class="partnumber2">3</span><span class="parttitle"><a href="tests.php?title=1&part=2">Part 3</a></span></li>
@@ -54,7 +54,7 @@
 	<li class="part"><span class="partnumber2">5</span><span class="parttitle"><a href="tests.php?title=1&part=4">Part 5</a></span></li>
   </ul>
   <ul class="theme3">
-	<li class="themetitleblock"><span class="themenumber3">III</span><span class="themetitle">Universe</span></li>
+	<li class="themetitleblock"><span class="themenumber3">III</span><span class="themetitle">NANOTECHNOLOGY</span></li>
     <li class="part"><span class="partnumber3">1</span><span class="parttitle"><a href="tests.php?title=2&part=0">Part 1</a></span></li>
 	<li class="part"><span class="partnumber3">2</span><span class="parttitle"><a href="tests.php?title=2&part=1">Part 2</a></span></li>
 	<li class="part"><span class="partnumber3">3</span><span class="parttitle"><a href="tests.php?title=2&part=2">Part 3</a></span></li>
@@ -62,7 +62,7 @@
 	<li class="part"><span class="partnumber3">5</span><span class="parttitle"><a href="tests.php?title=2&part=4">Part 5</a></span></li>
   </ul>
   <ul class="theme4">
-	<li class="themetitleblock"><span class="themenumber4">IV</span><span class="themetitle">Universe</span></li>
+	<li class="themetitleblock"><span class="themenumber4">IV</span><span class="themetitle">INTERDISCIPLINARY PHYSICS</span></li>
     <li class="part"><span class="partnumber4">1</span><span class="parttitle"><a href="tests.php?title=3&part=0">Part 1</a></span></li>
 	<li class="part"><span class="partnumber4">2</span><span class="parttitle"><a href="tests.php?title=3&part=1">Part 2</a></span></li>
 	<li class="part"><span class="partnumber4">3</span><span class="parttitle"><a href="tests.php?title=3&part=2">Part 3</a></span></li>
@@ -70,7 +70,7 @@
 	<li class="part"><span class="partnumber4">5</span><span class="parttitle"><a href="tests.php?title=3&part=4">Part 5</a></span></li>
   </ul>
   <ul class="theme5">
-	<li class="themetitleblock"><span class="themenumber5">V</span><span class="themetitle">Universe</span></li>
+	<li class="themetitleblock"><span class="themenumber5">V</span><span class="themetitle">SCIENTIFIC SOLUTIONS FOR GLOBAL ISSUES</span></li>
     <li class="part"><span class="partnumber5">1</span><span class="parttitle"><a href="tests.php?title=4&part=0">Part 1</a></span></li>
 	<li class="part"><span class="partnumber5">2</span><span class="parttitle"><a href="tests.php?title=4&part=1">Part 2</a></span></li>
 	<li class="part"><span class="partnumber5">3</span><span class="parttitle"><a href="tests.php?title=4&part=2">Part 3</a></span></li>
