--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
                 <img src="logo.png" width="200vw">
              </div>
              <div class="menu">
-                    <a href="/index.html">Home</a>
-                    <a href="/about.php">About</a>
+                    <a href="index.html">Home</a>
+                    <a href="about.php">About</a>
                     <a href="#">Content</a>
                     <a href="#navanchor">Nav</a>
             </div>
