--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="animationblock">
         <div class="topblock">
              <div class="logo">
-                <img src="logo.png" width="200vw">
+                <img src="logo.png" width="130vw">
              </div>
              <div class="menu">
                     <a href="index.html">Home</a>
@@ -36,7 +36,7 @@
 </svg>
 <div class="content">
 <div class="centerblock">
-<p class="navtitle">Навигация</p>
+<p class="navtitle">пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ</p>
 <ul class="theme1">
 	<li class="themetitleblock"><span class="themenumber1">I</span><span class="themetitle">HISTORY OF PHYSICS</span></li>
     <li class="part"><span class="partnumber1">1</span><span class="parttitle"><a href="tests.php?title=0&part=0">Part 1</a></span></li>
