--- a/index.html
+++ b/index.html
@@ -80,12 +80,11 @@
 </div>
 </div>
 </body>
-<script src="svgs/portrait.js"></script>
+<script src="svgs/atom.js"></script>
+<!--<script src="svgs/portrait.js"></script>
 <script src="svgs/volcano.js"></script>
 <script src="svgs/atom.js"></script>
-<script src="svgs/map.js"></script>
 <script src="svgs/universe.js"></script>
-<!--
     <svg width="100" height="100" viewBox="0 0 687 827" fill="none" xmlns="http://www.w3.org/2000/svg">
         <a xlink:href="https://developer.mozilla.org/en-US/docs/SVG"
            target="_blank">
