--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <div class="animationblock">
         <div class="topblock">
              <div class="logo">
-                <img src="logo.png" width="130vw">
+                 <a href="http://sfedu.ru" ><img src="logo.png" width="130vw"></a>
              </div>
              <div class="menu">
                     <a href="index.html">Home</a>
                     <a href="about.php">About</a>
                     <a href="#">Content</a>
-                    <a href="#navanchor">Nav</a>
+                    <a href="#navanchor">Navigation</a>
             </div>
         </div>
         <div class="map" id="map">
