--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 						</nav>
 
 						<div class="content">
-							<h3 align="center">DEPARTMENT OF ENGLISH FOR SCIENCES</h3>
-							<h4 align="center">Elena I. Grushko</h4>
-							<h5 align="center">VIDEO-BASED LISTENING COMPREHENSION TASKS FOR UNDERGRADUATE AND GRADUATE STUDENTS IN SCIENCES</h5>
+							<h4 align="center">DEPARTMENT OF ENGLISH FOR SCIENCES</h4>
+							<h5 align="center">Elena I. Grushko</h5>
+							<h6 align="center" style="padding-bottom: 10px">VIDEO-BASED LISTENING COMPREHENSION TASKS FOR UNDERGRADUATE AND GRADUATE STUDENTS IN SCIENCES</h6>
 							<div class="row">
 								<div class="col s6 offset-s3" style="float:none;">
 									<div class="card white lighten-5">
