--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 				<body>
 					<nav>
 						<div class="nav-wrapper">
-							<a href="#" class="brand-logo"><img src="logo.png" width="65vw" height="65vw"></a>
+							<a href="https://sfedu.ru/" class="brand-logo"><img src="logo.png" width="65vw" height="65vw"></a>
 								<ul id="nav-mobile" class="right hide-on-med-and-down">
 									<li><a href="index.html">Home</a></li>
 									<li><a href="about.php">About</a></li>
